tests/build/fail/widget/cannot_remove_inherited_required.stderr
error: cannot remove, property `margin` is required
  --> $DIR/cannot_remove_inherited_required.rs:17:18
   |
17 |         remove { margin }
   |                  ^^^^^^
